--- a/css/main.css
+++ b/css/main.css
@@ -115,6 +115,10 @@ div h2 p {
   border: none;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 @media (max-width: 480px) {
   .centerimg {
     width: 100%;
